# SpamKiller

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Scrape_user_ids.session  Scrape_user_ids.session-journal  config.py  config.yml  data.dvc  prompts.yml  pyproject.toml  requirements.txt  run_spamkiller.sh
.dvc/: .gitignore  config
.github/workflows/: python-app.yaml
app/: app.py
docker/: Dockerfile
docs/: DesignDocEN.md  DesignDocRU.md
logs/: temp_list_with_new_user.json
scripts/: data.py  data_preprocessing.py  make_metrics.py  make_pred_scores_to_df.py  not_spam_id.py  predict_spam_scores.py  rules_base_model.py  watching.py
src/: add_new_user_id.py  app.py  bert_spam_classifier.py  clean_text.py  commands.py  json_to_csv.py  read_message.py  send_messages.py  spam_aug.py
src/app/: __init__.py  ban_user.py  bot.py  loader.py
src/config/: config.py
src/data/: data.py  make_pred_scores_to_df.py
src/handlers/: __init__.py  comands.py  commands.py  messages.py
src/metrics/: README.md  __init__.py  evaluate_gpt_metrics.py  metrics.py
src/models/: __init__.py  gpt_classifier.py  gpt_classifier_validation.py  logistic_regression.py  rule_based_model.py  rule_based_model_prod.py  rule_based_model_validation.py  rules_base_model.py  rules_base_model_prod.py  rules_base_model_validation.py  user_analisys.py
src/scripts/: make_metrics.py
src/utils/: add_new_user_id.py  commands.py  message_processing.py  scrapper.py  send_messages.py  spam_detection.py  spam_history_manager.py
static/: run_bot.py
tests/: test_read_message.py
