[tool.poetry]
name = "spamkiller"
version = "0.1.0"
description = ""
authors = ["Sokolov Fedor <sokol_f4@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.3.0"
numpy = "1.25.0"
openai = "1.1.0"
pandas = "2.0.3"
loguru = "0.7.0"
aiogram = "2.25.1"
python-dotenv = "1.0.0"
pyyaml = "6.0"
socksio = "1.0.0"
tqdm = "4.65.0"
matplotlib = "3.7.1"
seaborn = "0.12.2"
httpx = "0.25.1"
httpx-socks = "0.8.0"
fire = "0.5.0"
watchdog = "3.0.0"
fuzzywuzzy = "0.18.0"
levenshtein = "0.21.1"
clearml = "1.11.1"
telethon = "1.34.0"
tiktoken = "0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
